--- a/src/app/features/category/components/filters/filters.component.css
+++ b/src/app/features/category/components/filters/filters.component.css
@@ -5,8 +5,8 @@ button{
     background-color: white;
     letter-spacing: 1px;
     border: none;
-    color: rgba(14, 17, 22, 0.8);
-    font-weight: 500;
+    color: var(--black);
+    font-family: 'Roboto-reg', sans-serif;
     transition: color .2s;
 }
 button:hover{
