--- a/src/app/shared/components/doc-profile/doc-profile.component.html
+++ b/src/app/shared/components/doc-profile/doc-profile.component.html
@@ -9,7 +9,7 @@
   "
 >
   <div class="row justify-content-center">
-    <div class="col-lg-4 col-sm-7 p-3">
+    <div class="col-lg-3 col-md-4 col-sm-5 p-3">
       <div class="image-container">
         <img class="image-fluid" [src]="profileData.profile_photo" alt="" />
       </div>
@@ -65,8 +65,8 @@
         </div>
       </div>
     </div>
-
-    <div class="col-lg-8 col-sm-12">
+    <!-- Accordion start -->
+    <div class="col-lg-7 col-sm-12">
       <div class="accordion p-3" id="accordionExample">
         <div class="accordion-item">
           <h2 class="accordion-header" id="headingOne">
@@ -126,7 +126,7 @@
                   </div>
                   <div class="d-flex align-items-center">
                     <fa-icon class="ps-3" [icon]="phone"></fa-icon>
-                    <p class="ps-3 mb-0 text-break">{{ consultData.phone }}</p>
+                    <p class="ps-3 mb-0 text-break"><a href="tel:{{ consultData.phone }}">{{ consultData.phone }}</a></p>
                   </div>
                 </div>
                 <div class="col-lg-6 col-sm-12 p-2 mb-4">
