--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -1,8 +1,8 @@
-<div class="container-fluid shadow-sm p-1 w-100">
+<div class="container-fluid p-1 w-100">
   <div class="row align-items-center justify-content-center text-center">
     <div class="col-lg-4 col-sm-12 p-1 my-3 d-flex justify-content-center">
       <div id="image-container">
-        <img src="assets/images/medx (8).png" alt="Logo" class="img-fluid" />
+        <img src="assets/images/medx-01.png" alt="Logo" class="img-fluid" />
       </div>
     </div>
     <div class="col-lg-4 col-sm-12">
@@ -12,7 +12,7 @@
     </div>    
     <div class="col-4" *ngIf="!state">
       <a routerLink="/register"
-        ><button class="m-3 shadow-sm text-nowrap" id="register">
+        ><button class="m-3 text-nowrap" id="register">
           Regístrate <fa-icon [icon]="regIcon"></fa-icon></button
       ></a>      
     </div>    
