--- a/src/app/features/category/components/filters-display/filters-display.component.css
+++ b/src/app/features/category/components/filters-display/filters-display.component.css
@@ -3,9 +3,8 @@
     background-color: var(--white);
 }
 h5{
-    font-family: Titulos;
-    letter-spacing: 5px;
-    font-weight: 700;
+    font-family: 'Russo', sans-serif;
+    letter-spacing: 3px;
     font-size: 1rem;
     color: rgba(14, 17, 22, 0.9);
 }
