--- a/src/app/features/category/components/filters-display/profile-cards/profile-cards.component.html
+++ b/src/app/features/category/components/filters-display/profile-cards/profile-cards.component.html
@@ -29,9 +29,9 @@
       <p class="m-0 p-1">desde {{ profile.graduation_year }}</p>
     </div>
   </div>
-  <div class="p-3 text-center">
+  <div class="p-1 mb-2 text-center">
     <a (click)="sendToProfileFunction(profile)"
-      ><button class="w-50 my-2">
+      ><button class="w-75 my-2">
         <fa-icon [icon]="plus" class="p-1"></fa-icon>INFO
       </button></a
     >
