--- a/src/app/features/home/components/hero/hero.component.css
+++ b/src/app/features/home/components/hero/hero.component.css
@@ -1,21 +1,20 @@
-
 #main-container{
     background-color: white;
 }
 button{
+    font-family: 'Roboto-bold', sans-serif;
     padding:5px 25px;
     background-color: var(--purple);
     border-top-right-radius: 10px;
     border-bottom-right-radius: 10px;
     color: white;
-    font-weight: 500;
     letter-spacing: 1px;
     transition: background-color .5s;
     transition: color .5s;
 }
 button:hover{
-    background-color: var(--purpleO);
-    color: var(--blue);
+    background-color: var(--purple3);
+    color: var(--black);
 }
 #text{
   color: var(--purple);
@@ -28,17 +27,17 @@ h1{
     font-weight: 500;
     letter-spacing: 1.5px;
     font-size: 3.4rem;
-    font-family: Arial, Helvetica, sans-serif;
-    color: var(--blue)
+    font-family: 'Roboto-bold', sans-serif;
+    color: var(--black)
 }
 h5{
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-family: 'Roboto-reg', sans-serif;
     letter-spacing: 1px;
     font-size: 1rem;
 }
 fa-icon{
     font-size: 3rem;
-    color: var(--purpleO);
+    color: var(--orange2);
 }
 
 .stock-search-component-small {
