--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -4,7 +4,7 @@
     id="footer-row"
   >
     <div id="image-container">
-      <img src="assets/images/medx (8).png" alt="Logo" />
+      <img src="assets/images/medx-07.png" alt="Logo" />
     </div>
     <div id="icon-container" class="align-self-center justify-content-evenly">
       <a href="https://www.instagram.com/medxapp_cl/"
