--- a/src/app/shared/components/navbar/navbar.component.css
+++ b/src/app/shared/components/navbar/navbar.component.css
@@ -1,17 +1,21 @@
-.container-fluid{
-    background-color: white;
+.container-fluid {
+    background-color: var(--grey);
+    border-bottom: 3px groove var(--purple);
 }
-#image-container{
-    max-width: 90px;
+
+#image-container {
+    max-width: 100px;
     height: auto;
 }
-#image-container img{
+
+#image-container img {
     width: 100%;
     object-fit: contain;
 }
-#login{
+
+#login {
     padding: 12px 25px;
-    background-color: var(--blue); 
+    background-color: var(--blue);
     letter-spacing: 1px;
     color: white;
     font-weight: 700;
@@ -19,45 +23,75 @@
     border: none;
     transition: background-color .5s;
 }
-#login:hover{
+
+#login:hover {
     background-color: var(--yellow);
 }
-#register{
-    font-family: Arial, Helvetica, sans-serif;
+
+#register {
+    font-family: 'Roboto-bold', sans-serif;
     font-size: .9rem;
     padding: 12px 25px;
     letter-spacing: 1px;
-    background-color: var(--purple);
+    background-color: var(--orange);
     color: white;
     border-radius: 0px;
     border: none;
     font-weight: 700;
     transition: background-color .5s;
+    box-shadow: -5px 5px var(--purple);
 }
-#register fa-icon{
+
+#register fa-icon {
     color: white;
     font-size: .9rem;
 }
-#register:hover{
-    background-color: var(--purpleO);
+
+#register:hover {
+    background-color: var(--orange2);
 }
-fa-icon{
+
+fa-icon {
     font-size: 10px;
     margin-left: 5px;
     color: var(--blue);
 }
-a{
-    color: var(--blue);
+
+a {
+    color: var(--black);
     letter-spacing: 2px;
     font-weight: 500;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Roboto-reg', sans-serif;
     font-size: 1rem;
     transition: color .5s;
     background-color: none;
     text-decoration: none;
     transition: font-weight .5s;
 }
-a:hover{
-    color: var(--lightblue);
-    font-weight: bold;
+
+a:hover {
+    color: var(--orange);
+}
+
+@media (max-width: 576px) {
+    #image-container {
+        max-width: 150px;
+    }
+
+    a {
+        font-size: .8rem;
+    }
+
+    #register {
+        font-family: 'Roboto-bold', sans-serif;
+        font-size: .7rem;
+        padding: 10px 17px;
+        letter-spacing: .5px;
+        background-color: var(--orange);
+        color: white;
+        border-radius: 0px;
+        border: none;
+        transition: background-color .5s;
+        box-shadow: -3px 3px var(--purple);
+    }
 }
