--- a/src/app/features/about/views/about.component.html
+++ b/src/app/features/about/views/about.component.html
@@ -9,7 +9,7 @@
 
 <div class="container mb-5 p-5" id="container">
   <div class="row justify-content-center text-center">
-    <h1>Bienvenid@s a MEDX</h1>
+    <h1>BIENVENID@S A MEDX</h1>
     <h3>
       Encuentra profesionales de salud de manera fácil y rápida con nuestra StartUp.
     </h3>
@@ -18,8 +18,7 @@
         <img src="assets/images/poster.svg" alt="" class="rounded" />
       </div> 
       <div class="mt-3">
-        <h5 class="p-3">Quieres saber mas?</h5>
-        <a href="assets/docs/Press. MedxApp 2023.pdf" id="link-download" class="shadow-sm" descargar>Click Aqui!</a>      
+        <a href="assets/docs/Press. MedxApp 2023.pdf" target="_blank" id="link-download" class="shadow-sm" descargar>Descarga aquí nuestra presentación</a>      
       </div>
     </div>
     <div class="col-lg-7 col-sm-12 my-5">
