--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -9,13 +9,13 @@
       <a routerLink="home" class="m-1 py-2 px-4">Inicio</a>
       <a routerLink="about" class="m-1 py-2 px-4 text-nowrap">Sobre Medx</a>
       <a routerLink="contact" class="m-1 py-2 px-4">Contacto</a>
-    </div>    
+    </div>
     <div class="col-4" *ngIf="!state">
-      <a routerLink="/register"
+      <a href="https://forms.gle/vBu6iT72orbrqw6Z9" target="_blank"
         ><button class="m-3 text-nowrap" id="register">
           Regístrate <fa-icon [icon]="regIcon"></fa-icon></button
-      ></a>      
-    </div>    
+      ></a>
+    </div>
   </div>
 </div>
 
