arreglos en responsividad

--- a/src/app/features/about/views/about.component.css
+++ b/src/app/features/about/views/about.component.css
@@ -6,31 +6,46 @@
     height: 100%;
     margin: 0px;
 }
+
 .img-container img{
     width: 100%;
     height: auto;
     object-fit: contain;
     border: none;
 }
+
 h1{
     font-family: 'Russo', sans-serif;
     font-size: 2rem;
     letter-spacing: 3.5px;
 }
+
 h3{
     color: rgba(14, 17, 22, 0.6);
     font-family: 'Roboto-reg', sans-serif;
 }
+
 p{
     font-family: 'Roboto-light', sans-serif;
     font-size: 1rem;
     letter-spacing: 1px;
 }
+
 strong{
     color: var(--purple);
     font-family: 'Roboto-bold', sans-serif;
 }
-#link-download{
+
+a{
+    font-family: 'Roboto-reg', sans-serif;
+    color: var(--orange);
+}
+
+a:hover{
+    color: var(--purple);
+}
+
+/* #link-download{
     background-color: var(--purple);
     padding: 10px 15px ;
     text-decoration: none;
@@ -41,4 +56,4 @@ strong{
 }
 #link-download:hover{
     background-color: var(--orange);
-}
+} */
