--- a/src/app/features/category/components/filters-display/profile-cards/profile-cards.component.html
+++ b/src/app/features/category/components/filters-display/profile-cards/profile-cards.component.html
@@ -13,13 +13,13 @@
 
 <div class="container p-0 my-4 mx-3 shadow">
   <div class="img-container">
-    <img [src]="profile.profile_photo" alt="" />
+    <img [src]="profile.profile_photo" alt="profile_photo" />
   </div>
-  <div class="d-flex-column flex-wrap p-3 mb-3">
-    <div>
+  <div class="d-flex-column flex-wrap p-3">
+    <div id="category-container">
       <h6 class="m-0 p-1">{{ categoryData.name }}</h6>
     </div>
-    <div>
+    <div id="name-container">
       <h5 class="m-0 p-1">
         {{ profile.first_name }} {{ profile.last_name }}
         {{ profile.second_lastname }}
