--- a/src/app/features/medical-center/views/medical-center.component.html
+++ b/src/app/features/medical-center/views/medical-center.component.html
@@ -1,5 +1,5 @@
-<div class="container p-3" *ngIf="medicalCenterData !== undefined">
-  <div class="row p-3 m-1 justify-content-center">
+<div class="container p-lg-3" *ngIf="medicalCenterData !== undefined">
+  <div class="row p-lg-3 p-sm-1 m-1 justify-content-center">
     <div class="col-lg-5 col-md-12 col-sm-12 p-1">
       <div class="row justify-content-center">
         <div class="col-12 text-center">
@@ -21,7 +21,7 @@
         </div>
       </div>
     </div>
-    <div class="col-lg-6 col-md-12 col-sm-12 p-3 mb-3 ms-4">
+    <div class="col-lg-6 col-md-12 col-sm-12 p-lg-3 p-sm-1 mb-lg-3 ms-lg-4 ms-sm-1">
       <div class="row justify-content-start">
         <div class="col-12 d-flex justify-content-between">
           <div class="d-flex flex-column">
@@ -55,7 +55,7 @@
     <h5>Sobre nosostros:</h5>
     <p align="justify" id="resume">{{ medicalCenterData.description }}</p>
   </div>
-  <div class="row p-3 m-1 justify-content-center">
+  <div class="row p-lg-3 m-1 justify-content-center">
     <h5>Nuestro equipo:</h5>
     <div id="table-container" class="mt-2 table-responsive">
       <table class="table">
