--- a/src/app/shared/components/doc-profile/doc-profile.component.html
+++ b/src/app/shared/components/doc-profile/doc-profile.component.html
@@ -67,7 +67,7 @@
     </div>
     <!-- Accordion start -->
     <div class="col-lg-7 col-sm-12">
-      <div class="accordion p-3" id="accordionExample">
+      <div class="accordion" id="accordionExample">
         <div class="accordion-item">
           <h2 class="accordion-header" id="headingOne">
             <button
