--- a/src/app/features/about/views/about.component.html
+++ b/src/app/features/about/views/about.component.html
@@ -17,11 +17,11 @@
       <div class="img-container">
         <img src="assets/images/poster.svg" alt="" class="rounded" />
       </div> 
-      <div class="mt-3">
-        <a href="assets/docs/Press. MedxApp 2023.pdf" target="_blank" id="link-download" class="shadow-sm" descargar>Descarga aquí nuestra presentación</a>      
+      <div class="mt-5" id="download-container">
+        <a href="assets/docs/Press. MedxApp 2023.pdf" target="_blank" id="link-download" descargar>DESCARGA NUESTRA PRESENTACIÓN</a>      
       </div>
     </div>
-    <div class="col-lg-7 col-sm-12 my-5">
+    <div class="col-lg-7 col-sm-12 my-lg-5">
       <div>
         <p align="justify" class="lh-lg">
           En la era digital actual, encontrar profesionales de salud competentes y confiables puede resultar un desafío
