--- a/src/app/features/category/components/filters-display/profile-cards/profile-cards.component.css
+++ b/src/app/features/category/components/filters-display/profile-cards/profile-cards.component.css
@@ -34,34 +34,47 @@ button{
 } */
 .container{
     width: 200px;
-    height: auto;
+    height: 400px;
 }
+
+#name-container{
+    width: 100%;
+    height: 50px;
+    overflow: auto;
+}
+
 .img-container{
     width: 200px;
     height: 200px;
 }
+
 .img-container img{
     width: 100%;
     height: 100%;
     object-fit: cover;
     object-position: center;
 }
+
 p{
     color: lightslategrey;
     font-family: 'Roboto-reg', sans-serif;
     font-size: .8rem;
 }
+
 h6{
     color: lightslategrey;
     font-size: .9rem;
     font-family: 'Roboto-bold', sans-serif;
     letter-spacing: 1px;
+    white-space: nowrap;
 }
+
 h5{
     font-size: 1.1rem;
     font-family: 'Roboto-reg', sans-serif;
     color: var(--black);
 }    
+
 button{
     border-radius: 0px;
     border: 0px;
@@ -74,6 +87,7 @@ button{
     transition: background-color .5s;
     transition: color .5s;
 }
+
 button:hover{
     background-color: var(--orange);
     color: var(--white);
