--- a/src/app/features/category/components/filters-display/profile-cards/profile-cards.component.css
+++ b/src/app/features/category/components/filters-display/profile-cards/profile-cards.component.css
@@ -33,7 +33,7 @@ button{
     letter-spacing: 1px;
 } */
 .container{
-    width: 200px;
+    max-width: 300px;
     height: 400px;
 }
 
@@ -44,8 +44,8 @@ button{
 }
 
 .img-container{
-    width: 200px;
-    height: 200px;
+    width: 288px;
+    height: 250px;
 }
 
 .img-container img{
