--- a/src/app/features/category/components/filters-display/profile-cards/profile-cards.component.html
+++ b/src/app/features/category/components/filters-display/profile-cards/profile-cards.component.html
@@ -11,7 +11,7 @@
   </div>
 </div> -->
 
-<div class="container p-0 my-4 mx-3 shadow">
+<div class="p-0 my-4 mx-3 shadow">
   <div class="img-container">
     <img [src]="profile.profile_photo" alt="profile_photo" />
   </div>
