--- a/src/app/shared/components/doc-profile/doc-profile.component.html
+++ b/src/app/shared/components/doc-profile/doc-profile.component.html
@@ -126,7 +126,11 @@
                   </div>
                   <div class="d-flex align-items-center">
                     <fa-icon class="ps-3" [icon]="phone"></fa-icon>
-                    <p class="ps-3 mb-0 text-break"><a href="tel:{{ consultData.phone }}">{{ consultData.phone }}</a></p>
+                    <p class="ps-3 mb-0 text-break">
+                      <a href="tel:{{ consultData.phone }}">{{
+                        consultData.phone
+                      }}</a>
+                    </p>
                   </div>
                 </div>
                 <div class="col-lg-6 col-sm-12 p-2 mb-4">
