--- a/src/app/shared/components/navbar/navbar.component.css
+++ b/src/app/shared/components/navbar/navbar.component.css
@@ -52,6 +52,10 @@ a:hover {
     color: var(--orange);
 }
 
+.align-text{
+    text-align: center;
+}
+
 /* #image-container {
     max-width: 100px;
     height: auto;
