--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -35,7 +35,7 @@
           <a routerLink="contact" class="nav-link">Contacto</a>
         </li>
       </ul>
-      <a href="https://forms.gle/vBu6iT72orbrqw6Z9" target="_blank">
+      <a routerLink="/register">
         <button class="m-lg-3 mb-sm-3 text-nowrap" id="register">
           Regístrate <fa-icon [icon]="regIcon"></fa-icon>
         </button>
