--- a/src/app/features/medical-center/views/medical-center.component.css
+++ b/src/app/features/medical-center/views/medical-center.component.css
@@ -79,88 +79,26 @@ button fa-icon{
 }
 
 /* table style */
-#table-container{
-    max-width: 90%;
+
+#list p{
+    margin: 0px;
+    font-family: 'Roboto-reg', sans-serif;
+    letter-spacing: 1px;
 }
+
 #photo-container{
-    min-width: 80px;
-    height: 80px;
+    min-width: 100%;
+    height: 75px;
 }
 #photo-container img{
     width: 100%;
     height: 100%;
     object-fit: contain;
 }
-table{
-    vertical-align: middle;
-    width: 100%;
-}
-table p{
-    margin: 0px;
-    padding: 0px;
-    font-family: 'Roboto-reg', sans-serif;
-    font-size: .9rem;
-}
-table a{
-    text-decoration: none;
-    color: black;
-    transition: color .3s;
-}
-table a:hover{
-    color: var(--purple);
-}
-#table-btn{
-    border-radius: 0px; 
-    background-color: var(--purple);   
-    transition: background-color .5s;
-}
-#table-btn:hover{
-    background-color: var(--grey);
-}
-#table-btn p{
-    color: var(--white);
-    font-family: 'Roboto-bold', sans-serif;
-    letter-spacing: 3px;
-    font-size: .8rem;
-    transition: color .5s;
-}
-#table-btn p:hover{
-    color: var(--orange);
-}
-#category a{
-    font-family: 'Russo', sans-serif;
-    font-size: .9rem;
-    font-weight: bold;
-    letter-spacing: 1px;
-}
-#full-name p{
-    font-family: 'Roboto-bold', sans-serif;
-    letter-spacing: 2px;
-    font-size: .9rem;
-}
-@media screen and (max-width:425px){
-    #icon-text{
-        font-size: .9rem;
+
+@media screen and (max-width:768px){
+    #photo-container{
+        height: 110px;
     }
-    fa-icon{
-        font-size: 20px;
-    }
-    h5{
-        font-size: 1.5rem;
-    }
-    h4{
-        font-size: 2rem;
-    }
-    p{
-        font-size: .7rem;
-        letter-spacing: 1px;
-    }
-    #full-name p{
-        letter-spacing: 1.8px;
-        font-size: .7rem;
-        text-align: left;
-    }
-    table{
-     text-align: center;
-    }
+    
 }
