--- a/src/app/features/medical-center/views/medical-center.component.html
+++ b/src/app/features/medical-center/views/medical-center.component.html
@@ -63,7 +63,45 @@
   </div>
   <div class="row p-lg-3 m-1 justify-content-center">
     <h5>Nuestro equipo:</h5>
-    <div id="table-container" class="mt-2 table-responsive">
+    <div class="container mt-3" *ngFor="let person of medicalCenterPersons">
+      <div class="row align-items-center justify-content-center p-2">
+        <div class="col-lg-2 col-md-2 col-sm-4 col-xs-4">
+          <div id="photo-container">
+            <img src="{{ person.profile_photo }}" alt="photo" />
+          </div>
+        </div>
+        <div class="col-lg-8 col-md-8 col-sm-8 col-xs-8">
+          <div class="row justify-content-evenly" id="list">
+            <div class="col-lg-4 col-sm-6 text-center align-self-center">
+              <p>
+                {{ person.first_name }} {{ person.last_name }}
+                {{ person.second_lastname }}
+              </p>
+            </div>
+            <div class="col-lg-2 col-sm-6 text-center align-self-center">
+              <p>{{ calcularEdad(person.birth_date) + " años" }}</p>
+            </div>
+            <div class="col-lg-3 col-sm-6 text-center align-self-center">
+              <p>{{ person.degree_name }}</p>
+            </div>
+            <div class="col-lg-3 col-sm-6 text-center align-self-center">
+              <button
+                class="btn"
+                id="table-btn"
+                (click)="sendToProfileFunction(person)"
+              >
+                <p>Ir</p>
+              </button>
+            </div>
+          </div>
+        </div>
+        <hr class="mt-3" />
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- <div id="table-container" class="mt-2 table-responsive">
       <table class="table">
         <tbody>
           <tr *ngFor="let person of medicalCenterPersons">
@@ -96,6 +134,4 @@
           </tr>
         </tbody>
       </table>
-    </div>
-  </div>
-</div>
+    </div> -->
